--- a/dada/templates/view_list_type_switch_widget.tmpl
+++ b/dada/templates/view_list_type_switch_widget.tmpl
@@ -21,7 +21,8 @@
 				</a>				
 			</li>
 			
-			<li class="tab-title <!-- tmpl_if EXPR="(type eq 'test_list')" --> active<!-- /tmpl_if -->">
+			<!-- tmpl_if list_settings.enable_test_list -->
+				<li class="tab-title <!-- tmpl_if EXPR="(type eq 'test_list')" --> active<!-- /tmpl_if -->">
 					<!-- tmpl_if flavor_is_view_list -->
 						<a href="#" class="change_type" data-type="test_list">
 					<!-- tmpl_else --> 
@@ -32,6 +33,7 @@
 					</span>
 					</a>
 				</li>
+			<!-- /tmpl_if -->
 			
 			<!-- tmpl_if flavor_is_view_list --> 
 				<!-- tmpl_if list_settings.enable_subscription_approval_step -->
