Certainly  need to use HTML entitieds, ya know.

--- a/dada/templates/sending_monitor_screen.tmpl
+++ b/dada/templates/sending_monitor_screen.tmpl
@@ -27,7 +27,7 @@
 	
 	<p>
 		<a href="<!-- tmpl_var draft_url -->" class="button">
-			<< Return to Editing Draft
+			&lt;&lt; Return to Editing Draft
 		</a>
 	</p>
 	
