--- a/dada/templates/send_email_test_recipient_widget.tmpl
+++ b/dada/templates/send_email_test_recipient_widget.tmpl
@@ -71,7 +71,7 @@
 			type="hidden"
 			name="test_recipient_type"
 			id="test_recipient_type_from_textbox"
-			value="1"
+			value="from_textbox"
 		>
 		
 		<p>
