This cleans up the administration side of discussion message moderation: * The list/table of awaiting messages has been cleaned up * options to simply delete the message has been added * option to resend the moderation message to moderators has been added * link to view the moderation list has been added

--- a/dada/templates/plugins/bridge/default.tmpl
+++ b/dada/templates/plugins/bridge/default.tmpl
@@ -802,10 +802,11 @@
 				</div>
 
 				<div id="moderaton_params"> 
-		
 					<div class="alert-box info radius">
 						Messages sent to your discussion list will first have to be approved by: 
 					</div>
+					
+					
 	
 					<div class="row">
 						<div class="small-12 columns">	
@@ -916,6 +917,17 @@
 							</label> 
 						</div>
 					</div>
+					
+					<div class="clearfix">
+						<ul class="button-group right">
+						    <li>
+								<input type="button"  class="success view_awaiting_msgs button small" value="View Messages Awaiting Moderation (<!-- tmpl_var num_awaiting_msgs default="0" -->)">
+							</li>
+						</ul>
+					</div>
+					
+					
+					
 				</div> 
 			</fieldset> 
 		</div> 
