--- a/dada/templates/plugins/bridge/awaiting_msgs.tmpl
+++ b/dada/templates/plugins/bridge/awaiting_msgs.tmpl
@@ -24,109 +24,115 @@
 <div id="screen_meta" data-menu_highlight="bridge"></div>
 <div id="plugins_bridge_awaiting_msgs"></div> 
 
+<!-- tmpl_if list_settings.enable_moderation -->
 
-<!-- tmpl_if msg_entries -->
-	 <table style="width:100%" class="responsive">
-	  <tr>
-		  <th style="width:120px">
-			  &nbsp;
-		 </th>
-	     <th>
-	      From
-	   </th>
-	   <th>
-	      Subject
-	   </th>
+	<!-- tmpl_if msg_entries -->
+		 <table style="width:100%" class="responsive">
+		  <tr>
+			  <th style="width:120px">
+				  &nbsp;
+			 </th>
+		     <th>
+		      From
+		   </th>
+		   <th>
+		      Subject
+		   </th>
    
-	   <th>
-	      Sent
-	   </th>
-	   <th style="width:310px">
-	   &nbsp;
-	   </th>
-	  </tr>
+		   <th>
+		      Sent
+		   </th>
+		   <th style="width:310px">
+		   &nbsp;
+		   </th>
+		  </tr>
   
   
-	<!-- tmpl_loop msg_entries -->
-		<tr>
+		<!-- tmpl_loop msg_entries -->
+			<tr>
 			
-			<td>
+				<td>
 			
-					<a 
-						href="<!-- tmpl_var resend_link -->"
-						alt="Resend Confirmation Email"
-						class="small button"
-						title="Resend Moderation Email to all Moderators"
-						data-list="<!-- tmpl_var list_settings.list escape="HTML" -->"
+						<a 
+							href="<!-- tmpl_var resend_link -->"
+							alt="Resend Confirmation Email"
+							class="small button"
+							title="Resend Moderation Email to all Moderators"
+							data-list="<!-- tmpl_var list_settings.list escape="HTML" -->"
 						
-					>
-						<i class="fi-plus"></i>
-						<i class="fi-mail"></i>
-						<i class="fi-arrow-right"></i> 
-					</a>
-			</td>
+						>
+							<i class="fi-plus"></i>
+							<i class="fi-mail"></i>
+							<i class="fi-arrow-right"></i> 
+						</a>
+				</td>
 		
-			<td>
-				<!-- tmpl_var from escape="HTML" -->
-			</td>
-			<td>
-				<!-- tmpl_var subject escape="HTML"  -->
-			</td>
-			<td>
-				<!-- tmpl_var date escape="HTML"  -->
-			</td>
-			<td>
+				<td>
+					<!-- tmpl_var from escape="HTML" -->
+				</td>
+				<td>
+					<!-- tmpl_var subject escape="HTML"  -->
+				</td>
+				<td>
+					<!-- tmpl_var date escape="HTML"  -->
+				</td>
+				<td>
 				
 				
-				<ul class="button-group">
-				  <li>
+					<ul class="button-group">
+					  <li>
 				  	
-					<a 
-						class="small button success"
-						href="<!-- tmpl_var confirmation_link -->"
-					>
-						Accept
-					</a>
+						<a 
+							class="small button success"
+							href="<!-- tmpl_var confirmation_link -->"
+						>
+							Accept
+						</a>
 					
-				  </li>
-				  <li>
-				  	
-					
-					<a 
-						href="<!-- tmpl_var deny_link -->"
-						class="small button warning"
-					>
-						Deny
-					</a>
-					
-					
-					
-					
-				  </li>
-				  <li>
+					  </li>
+					  <li>
 				  	
 					
-					<a 
-						href="<!-- tmpl_var delete_link -->"
-						class="small button alert"
-					>
-						<i class="fi-x"></i> Delete 
-					</a>
+						<a 
+							href="<!-- tmpl_var deny_link -->"
+							class="small button warning"
+						>
+							Deny
+						</a>
 					
 					
 					
-				  </li>
-				</ul>
-			</td>
+					
+					  </li>
+					  <li>
+				  	
+					
+						<a 
+							href="<!-- tmpl_var delete_link -->"
+							class="small button alert"
+						>
+							<i class="fi-x"></i> Delete 
+						</a>
+					
+					
+					
+					  </li>
+					</ul>
+				</td>
 				
 				
 				
 
-		</tr>
-	<!-- /tmpl_loop -->
-	</table>
-<!-- tmpl_else -->
+			</tr>
+		<!-- /tmpl_loop -->
+		</table>
+	<!-- tmpl_else -->
+		<div class="alert-box info radius">
+			There are no messages awaiting moderation.
+		</div>
+	<!-- /tmpl_if -->
+<!-- tmpl_else --> 
 	<div class="alert-box info radius">
-		There are no messages awaiting moderation.
+		Moderation is not enabled.
 	</div>
 <!-- /tmpl_if -->
