"Approve", not "Accept"

--- a/dada/templates/plugins/bridge/awaiting_msgs.tmpl
+++ b/dada/templates/plugins/bridge/awaiting_msgs.tmpl
@@ -86,7 +86,7 @@
 							class="small button success"
 							href="<!-- tmpl_var confirmation_link -->"
 						>
-							Accept
+							Approve
 						</a>
 					
 					  </li>
