--- a/dada/templates/mailing_sending_mass_mailing_options_screen.tmpl
+++ b/dada/templates/mailing_sending_mass_mailing_options_screen.tmpl
@@ -2,10 +2,8 @@
 <div id="screen_meta" data-menu_highlight="mailing_sending_mass_mailing_options"></div>
 <div id="mailing_sending_mass_mailing_options"></div> 
 <form> 
-	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" >
+	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL_base64_encoded -->" > 
 </form> 
-
-
 
 <!-- tmpl_set name="title" value="Sending &#187; Mass Mailing Options" -->
 <div class="row hide-for-small-only" id="control_panel_breadcrumbs">
@@ -32,6 +30,10 @@
 	<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
 <!--/tmpl_if-->
 
+<form> 
+	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL_base64_encoded -->" > 
+</form> 
+
 <form 
 	name="default_form" 
 	id="default_form" 
@@ -39,7 +41,6 @@
 	method="post" 
 	accept-charset="<!-- tmpl_var HTML_CHARSET -->"
 >
-    <input type="hidden" name="s_program_url" id="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" >
 	<input type="hidden" name="process" value="1" >
 	<input type="hidden" name="flavor"  value="mailing_sending_mass_mailing_options" >
 	
