--- a/dada/templates/manage_list_consent.tmpl
+++ b/dada/templates/manage_list_consent.tmpl
@@ -28,14 +28,9 @@
 	</div>
 </div>
 
-<form>
-	<input 
-		type="hidden" 
-		id="s_program_url" 
-		name="s_program_url" 
-		value="<!-- tmpl_var S_PROGRAM_URL -->"
-	>
-</form>
+<form> 
+	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL_base64_encoded -->" > 
+</form> 
 
 <!-- tmpl_if done -->
 	<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
