--- a/dada/templates/membership_screen.tmpl
+++ b/dada/templates/membership_screen.tmpl
@@ -37,10 +37,11 @@
 
 <!-- tmpl_include view_list_modalmenu_widget.tmpl -->
 
-
+<form> 
+	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL_base64_encoded -->" > 
+</form> 
 
 <form> 
-	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" > 
 	<input type="hidden" id="email"         name="email"         value="<!-- tmpl_var email escape="HTML" -->" > 
 </form> 
 
