--- a/dada/templates/plugins/bounce_handler/default.tmpl
+++ b/dada/templates/plugins/bounce_handler/default.tmpl
@@ -23,7 +23,7 @@
 
 <div id="plugins_bounce_handler_default"></div> 
 <form> 
-	<input type="hidden" name="s_program_url"          id="s_program_url"    value="<!-- tmpl_var S_PROGRAM_URL -->" > 
+	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL_base64_encoded -->" > 
 	<input type="hidden" name="bounce_handler_page" id="bounce_handler_page" value="1" > 
 </form> 
 
