--- a/dada/templates/plugins/bounce_handler/manually_enter_bounces.tmpl
+++ b/dada/templates/plugins/bounce_handler/manually_enter_bounces.tmpl
@@ -5,7 +5,7 @@
 
 
 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post"> 
-	<input type="hidden" name="s_program_url" id="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" >
+	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL_base64_encoded -->" > 
 	<input type="hidden" name="process" id="process" value="1" > 
 	<input type="hidden" name="prm" id="prm" value="manually_enter_bounces" > 
 	<input type="hidden" name="flavor" value="plugins" > 
