--- a/dada/templates/plugins/bounce_handler/parse_bounce.tmpl
+++ b/dada/templates/plugins/bounce_handler/parse_bounce.tmpl
@@ -10,7 +10,7 @@
 
 
 <form name="some_form" id="some_form"> 
-	<input type="hidden" id="s_program_url"    name="s_program_url"        value="<!-- tmpl_var S_PROGRAM_URL -->" > 
+	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL_base64_encoded -->" > 
 	<input type="hidden" name="flavor" value="plugins" > 
     <input type="hidden" name="plugin" value="bounce_handler" > 
 	<input type="hidden" id="parse_amount"  name="parse_amount"  value="<!-- tmpl_if parse_amount --><!-- tmpl_var parse_amount --><!-- tmpl_else --><!-- tmpl_var MessagesAtOnce --><!-- /tmpl_if -->" > 
