--- a/dada/templates/plugins/tracker/message_report.tmpl
+++ b/dada/templates/plugins/tracker/message_report.tmpl
@@ -48,12 +48,7 @@
 <!-- /tmpl_if --> 
 
 <form id="tracker_message_info">
-	<input 
-		type="hidden" 
-		id="s_program_url"
-		name="s_program_url"
-		value="<!-- tmpl_var S_PROGRAM_URL -->"
-	> 
+	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL_base64_encoded -->" > 
 	<input 
 		type="hidden" 
 		id="tracker_message_id"
