--- a/dada/templates/scheduled_jobs.tmpl
+++ b/dada/templates/scheduled_jobs.tmpl
@@ -25,6 +25,10 @@
 <div id="scheduled_jobs"></div> 
 <div id="screen_meta" data-menu_highlight="scheduled_jobs"></div>
 
+<form> 
+	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL_base64_encoded -->" > 
+</form> 
+
 <form>
     
 <fieldset> 
@@ -80,8 +84,6 @@
 	</div>
     
 </fieldset> 
-
-        <input type="hidden" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" id="s_program_url" > 
         <input type="hidden" name="sched_flavor" id="sched_flavor" value="<!-- tmpl_var scheduled_jobs_flavor escape="HTML" -->" > 
 
 				<input 
