--- a/dada/templates/sending_monitor_index_screen.tmpl
+++ b/dada/templates/sending_monitor_index_screen.tmpl
@@ -27,7 +27,7 @@
 
 <div id="sending_monitor_index"></div> 
 <form> 
-	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" > 
+	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL_base64_encoded -->" > 
 </form> 
 
 <!-- tmpl_if killed_it -->
