--- a/dada/templates/view_list_screen.tmpl
+++ b/dada/templates/view_list_screen.tmpl
@@ -27,7 +27,7 @@
 </div>
 	
 <form>
-    <input type="hidden" id="s_program_url"     name="s_program_url"     value="<!-- tmpl_var S_PROGRAM_URL -->" > 
+	<input type="hidden" id="s_program_url"     name="s_program_url"     value="<!-- tmpl_var S_PROGRAM_URL_base64_encoded -->" > 
     <input type="hidden" id="support_files_url" name="support_files_url" value="<!-- tmpl_var SUPPORT_FILES_URL -->" > 
     <input type="hidden" id="type"              name="type"              value="<!-- tmpl_var type escape="HTML" -->" >	
     <input type="hidden" id="page"              name="page"              value="<!-- tmpl_var page escape="HTML"  -->" >	
