--- a/dada/templates/adv_archive_options_screen.tmpl
+++ b/dada/templates/adv_archive_options_screen.tmpl
@@ -32,6 +32,10 @@
 	<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
 <!--/tmpl_if-->
 
+<form> 
+	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL_base64_encoded -->" > 
+</form> 
+
 <form 
 	action="<!-- tmpl_var S_PROGRAM_URL -->" 
 	method="post" 
@@ -39,8 +43,6 @@
 	id="default_form" 
 	accept-charset="<!-- tmpl_var HTML_CHARSET -->"
 >
-
-<input type="hidden" name="s_program_url" id="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" >
 <input type="hidden" name="process" value="1" >
 <input type="hidden" name="flavor"       value="adv_archive_options" >
 
