--- a/dada/templates/drafts.tmpl
+++ b/dada/templates/drafts.tmpl
@@ -22,9 +22,9 @@
 <div id="screen_meta" data-menu_highlight="drafts"></div>
 
 
-<form>
-	<input type="hidden" name="s_program_url" id="s_program_url" value="<!-- tmpl_var s_program_url -->">
-</form>
+<form> 
+	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL_base64_encoded -->" > 
+</form> 
 
 
 <!-- tmpl_if delete_draft --> 
