--- a/dada/templates/list_activity_screen.tmpl
+++ b/dada/templates/list_activity_screen.tmpl
@@ -27,8 +27,8 @@
 <div id="screen_meta" data-menu_highlight="list_activity"></div>
 <div id="list_activity"></div> 
 <form> 
-	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" >
-</form>
+	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL_base64_encoded -->" > 
+</form> 
 
 <h3>Subscription Trends</h3> 
 
