--- a/dada/templates/list_options_screen.tmpl
+++ b/dada/templates/list_options_screen.tmpl
@@ -34,6 +34,10 @@
 
 
 
+<form> 
+	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL_base64_encoded -->" > 
+</form> 
+
 <form 
 	action="<!-- tmpl_var S_PROGRAM_URL -->" 
 	method="post" 
@@ -42,7 +46,6 @@
 	accept-charset="<!-- tmpl_var HTML_CHARSET -->"
 >
 
-    <input type="hidden" name="s_program_url" id="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" >
 	<input type="hidden" name="process" value="1" >
 	<input type="hidden" name="flavor"  value="list_options" >
 	
