--- a/dada/templates/mail_sending_advanced_options_screen.tmpl
+++ b/dada/templates/mail_sending_advanced_options_screen.tmpl
@@ -27,6 +27,11 @@
 <!-- tmpl_if done -->
 	<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
 <!--/tmpl_if-->
+	
+<form> 
+	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL_base64_encoded -->" > 
+</form>
+
 <form 
 	action="<!-- tmpl_var S_PROGRAM_URL -->" 
 	method="post" 
@@ -34,7 +39,6 @@
 	name="default_form"
 	id="default_form"
 >
-    <input type="hidden" name="s_program_url" id="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" >
 	<input type="hidden" name="process" value="1" >
 	<input type="hidden" name="flavor"  value="mail_sending_advanced_options" >
 	
