--- a/dada/templates/sending_monitor_container_screen.tmpl
+++ b/dada/templates/sending_monitor_container_screen.tmpl
@@ -9,7 +9,7 @@
 <div id="sending_monitor_container"></div>
 
 <form>
-	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" > 
+	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL_base64_encoded -->" > 
 	<input type="hidden" name="message_id"           id="message_id"           value="<!-- tmpl_var message_id -->" > 
 	<input type="hidden" name="message_type"         id="message_type"         value="<!-- tmpl_var message_type -->" > 
 	<input type="hidden" name="draft_id"             id="draft_id"             value="<!-- tmpl_var draft_id -->" > 
