--- a/dada/templates/subscription_options_screen.tmpl
+++ b/dada/templates/subscription_options_screen.tmpl
@@ -30,8 +30,11 @@
 <!--/tmpl_if-->
 
 
+<form> 
+	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL_base64_encoded -->" > 
+</form> 
+
 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="default_form" id="default_form">
-    <input type="hidden" name="s_program_url" id="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" >
     <input type="hidden" name="process" value="1" >
     <input type="hidden" name="flavor"       value="subscription_options" >
     
