--- a/dada/templates/transform_to_pro.tmpl
+++ b/dada/templates/transform_to_pro.tmpl
@@ -80,7 +80,7 @@
 		</div>
 		<div class="large-9 columns">
 			<form>
-				<input type="hidden" id="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->">
+				<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL_base64_encoded -->" > 
 			<button 
 				type="button" 
 				class="success expand verify_pro_dada"
