That's the feature.

--- a/dada/templates/change_info_screen.tmpl
+++ b/dada/templates/change_info_screen.tmpl
@@ -407,8 +407,26 @@
 			>
      </div>
   </div>
-
- 
+  
+  <div class="row">
+  	<div class="large-3 medium-3 columns">
+  	    <label 
+  			class="medium-text-right"
+  			for="whatsapp_number"
+  		>
+           	WhatsApp Number
+  		</label>
+  	</div>
+  	<div class="large-9 medium-9 columns">
+       	<input 
+ 			type="text" 
+ 			name="whatsapp_number" 
+ 			id="whatsapp_number" 
+ 			value="<!-- tmpl_var list_settings.whatsapp_number escape="HTML" -->" 
+ 			
+ 			>
+      </div>
+   </div>
 
 <div class="clearfix">
 	<ul class="button-group right">
