jquery upgrade to v2.2.4

--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -24,7 +24,7 @@
 <!-- /tmpl_if --> 
 
 <!-- jQuery -->
-<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery-2.1.4.min.js"></script>
+<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery-2.2.4.min.js"></script>
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery/jquery.tablesorter.js?v=<!-- tmpl_var VER escape=URL -->"></script>
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/clipboard.min.js?v=<!-- tmpl_var VER escape=URL -->"></script>
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/spin.min.js?v=<!-- tmpl_var VER escape=URL -->"></script>
@@ -235,7 +235,7 @@
 	<!-- tmpl_if GIVE_PROPS_IN_ADMIN -->
 			<div class="right">
 				<p style="margin:10px">
-					<a href="http://dadamailproject.com?you_are_beautiful_admin" target="_blank">
+					<a href="https://dadamailproject.com?you_are_beautiful_admin" target="_blank">
 						<img 
 							src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/powered_by_dada_mail.gif" 
 							width="278"
