--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -638,7 +638,7 @@
 
 
 <p class="text-right">
-	<a class="button info small" target="_blank" href="http://dadamailproject.com/d/install_dada_mail-advanced_configuration.pod.html">
+	<a class="button info small" target="_blank" href="https://dadamailproject.com/d/install_dada_mail-advanced_configuration.pod.html">
 		Learn More About Advanced Options...
 	</a>
 </p>
