--- a/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
@@ -96,7 +96,7 @@
  	<a 
  		class="button info small" 
  		target="_blank" 
- 		href="http://dadamailproject.com/d/features-scheduled_cronjobs.pod.html"
+ 		href="https://dadamailproject.com/d/features-scheduled_cronjobs.pod.html"
  	>
  		Learn more about cronjobs in <!-- tmpl_var PROGRAM_NAME -->...
  	</a>
@@ -151,7 +151,7 @@
  	<a 
  		class="button info small" 
  		target="_blank" 
- 		href="http://dadamailproject.com/d/FAQ-installing_CPAN_Perl_modules.pod.html"
+ 		href="https://dadamailproject.com/d/FAQ-installing_CPAN_Perl_modules.pod.html"
  	>
  		Learn more about installing CPAN Perl Modules...
  	</a>
