--- a/dada/templates/email_themes_screen.tmpl
+++ b/dada/templates/email_themes_screen.tmpl
@@ -31,7 +31,7 @@
 
 <!-- tmpl_if GIVE_PROPS_IN_ADMIN -->
 		<p class="text-center">
-			<a href="http://dadamailproject.com/purchase/pro.html" target="_blank" class="button success">
+			<a href="https://dadamailproject.com/purchase/pro.html" target="_blank" class="button success">
 				<em>
 					Upgrade to <strong>Pro Dada</strong> for over a dozen+ more included email themes!
 					</em>
