--- a/dada/templates/transform_to_pro.tmpl
+++ b/dada/templates/transform_to_pro.tmpl
@@ -20,7 +20,7 @@
 	
 	<p>
 		<a 
-			href="http://dadamailproject.com/purchase/pro.html"
+			href="https://dadamailproject.com/purchase/pro.html"
 		>
 			Click the button below
 		</a>
@@ -29,7 +29,7 @@
 </p>
 
 <a 
-	href="http://dadamailproject.com/purchase/pro.html"
+	href="https://dadamailproject.com/purchase/pro.html"
 	class="large button expand"
 	target="_blank"
 >
