--- a/dada/templates/web_services.tmpl
+++ b/dada/templates/web_services.tmpl
@@ -27,7 +27,7 @@
 
 <div class="alert-box info radius">
     <p><strong>Confused?</strong> See the 
-        <a href="http://dadamailproject.com/d/features-restful_web_services.pod.html" target="_blank">
+        <a href="https://dadamailproject.com/d/features-restful_web_services.pod.html" target="_blank">
         docs on Web Services
        </a>
         to learn how to utilize the RESTful Web Services API.</p> 
