--- a/dada/installer-disabled/templates/install_or_upgrade.tmpl
+++ b/dada/installer-disabled/templates/install_or_upgrade.tmpl
@@ -122,7 +122,7 @@
 	<a 
 		class="button info small" 
 		target="_blank" 
-		href="http://dadamailproject.com/d/install_dada_mail.pod.html"
+		href="https://dadamailproject.com/d/install_dada_mail.pod.html"
 	>
 		Learn how to install <!-- tmpl_var PROGRAM_NAME -->...
 	</a>
